[gd_scene format=3 uid="uid://86hbso5h0k8v"]

[ext_resource type="Script" uid="uid://c1uupgh8v751i" path="res://Scripts/house_basic.gd" id="1_5xshv"]
[ext_resource type="PackedScene" uid="uid://gdt4xiykkwc" path="res://Assets/Meshes/buildings/house_basic.glb" id="1_h5mpc"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1lwu3"]
size = Vector3(1.4383545, 2.6437988, 1.7642822)

[node name="house_basic" type="Node3D" unique_id=1031075720]
script = ExtResource("1_5xshv")

[node name="house_basic" parent="." unique_id=377140216 instance=ExtResource("1_h5mpc")]

[node name="Area3D" type="Area3D" parent="." unique_id=766889722]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.967346, 1.6200562, 0)
collision_mask = 9

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" unique_id=1374330943]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.21917725, -0.40124512, -0.070007324)
shape = SubResource("BoxShape3D_1lwu3")

[node name="Label3D" type="Label3D" parent="." unique_id=208136278]
transform = Transform3D(-0.010070398, 0, 0.9999493, 0, 1, 0, -0.9999493, 0, -0.010070398, 5.005127, 3.1818237, 0)
billboard = 1
no_depth_test = true
text = "Press E to Enter..."
font_size = 80

[node name="spawn_point" type="Node3D" parent="." unique_id=1676413697]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.749115, 1.2087402, 0)

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]

[editable path="house_basic"]
